--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>MyLinks</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#ff0096">
   <link rel="icon" type="image/x-icon" href="../public/img/Bolinha.png">
 </head>
 <body>
