--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MyLinks</title>
-  <base href="/MyLinks/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#ff0096">
   <link rel="icon" type="image/x-icon" href="../public/img/Bolinha.png">
